fix blocks alignment

--- a/wp-content/themes/sixgill/css/custom_2016.css
+++ b/wp-content/themes/sixgill/css/custom_2016.css
@@ -263,6 +263,7 @@ nav#primary-menu > ul {
 .resources-blocks-container {
 	text-align: left;
 	min-width: 1520px !important;
+	max-width: 1520px !important;
 	display: inline-block;
 }
 
